--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,22 @@
   <version>1.0-SNAPSHOT</version>
   <name>Archetype - SeleniumJava</name>
   <url>http://maven.apache.org</url>
+  <properties>
+    <allure.version>2.24.0</allure.version>
+  </properties>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>io.qameta.allure</groupId>
+        <artifactId>allure-bom</artifactId>
+        <version>${allure.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
 
   <dependencies>
     <!-- Selenium Java -->
@@ -28,6 +44,18 @@
       <artifactId>testng</artifactId>
       <version>7.10.2</version>
       <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>io.qameta.allure</groupId>
+      <artifactId>allure-testng</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.qameta.allure</groupId>
+      <artifactId>allure-java-commons</artifactId>
+      <version>2.26.0</version>
+      <scope>compile</scope>
     </dependency>
   </dependencies>
   <build>
