--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,3 +1,5 @@
 baseUrl=https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
-browser=CHROME
+browser=FIREFOX
+seleniumExecutionMode=REMOTE
+seleniumRemoteURL=http://localhost:4444/
 defaultWait=5
