--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 baseUrl=https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
-browser=FIREFOX
-seleniumExecutionMode=REMOTE
+browser=CHROME
+seleniumExecutionMode=LOCAL
 seleniumRemoteURL=http://localhost:4444/
 defaultWait=5
