set headless support

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,6 @@
 baseUrl=https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
 browser=CHROME
+HEADLESS=true
 seleniumExecutionMode=LOCAL
 seleniumRemoteURL=http://localhost:4444/
 defaultWait=5
