add Part 2a test, verifyCardInformation

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,4 +1,4 @@
-baseUrl=https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
+baseUrl=https://vue-aknxx1.stackblitz.io/
 browser=CHROME
 HEADLESS=false
 seleniumExecutionMode=LOCAL
